--- a/src/app/components/pages/games/sort-words/sort-words.component.html
+++ b/src/app/components/pages/games/sort-words/sort-words.component.html
@@ -13,11 +13,13 @@
         <!-- <p class="text-muted mb-4">Click on the words below to arrange them into a correct sentence</p> -->
         
         <!-- Shuffled Words -->
-        <div class="mb-3">
+        <div class="mb-3 d-flex flex-wrap justify-content-center">
           <button 
-            *ngFor="let word of shuffledWords"
+            *ngFor="let word of shuffledWords; let i = index"
             class="btn"
-            (click)="selectWord(word)">
+            [style.background]="getRandomColor(i)"
+            (click)="selectWord(word)"
+            [attr.aria-label]="'Select word: ' + word">
             {{ word }}
           </button>
         </div>
@@ -25,18 +27,21 @@
         <!-- Selected Words -->
         <div class="selected-words mb-4">
           <div *ngIf="selectedWords.length === 0" class="text-muted h-100 d-flex align-items-center justify-content-center">
-            <!-- <div class="text-center">
+            <div class="text-center">
               <i class="bi bi-arrow-up-circle fs-1 d-block mb-2"></i>
               <span>Click on the words above to build your sentence</span>
-            </div> -->
+            </div>
           </div>
           <div *ngIf="selectedWords.length > 0" class="selected-sentence">
-            <span *ngFor="let word of selectedWords; let i = index; let last = last" 
-                  class="selected-word"
-                  (click)="removeWord(word, i)"
-                  [title]="'Click to remove ' + word">
-              {{ word }}<span *ngIf="!last"> </span>
-            </span>
+            <button 
+              *ngFor="let word of selectedWords; let i = index" 
+              class="btn"
+              [style.background]="getRandomColor(i)"
+              (click)="removeWord(word, i)"
+              [attr.aria-label]="'Remove word: ' + word">
+              {{ word }}
+              <i class="bi bi-x ms-2"></i>
+            </button>
           </div>
         </div>
         
