--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,7 +1,7 @@
-<div class="background">
+<!-- <div class="background">
     <app-background></app-background>
     <app-background></app-background>
-</div>
+</div> -->
 <!-- <div class="lines" style="position: absolute; z-index: -1; top: 100vh;">
     <img class="img-fluid" src="images/learningZone/background.png" alt="lines">
     <img class="img-fluid" src="images/learningZone/StarsBackground.png" alt="lines">
