--- a/src/app/components/pages/learning/learning.component.html
+++ b/src/app/components/pages/learning/learning.component.html
@@ -1,4 +1,4 @@
-<app-background></app-background>
+<!-- <app-background></app-background> -->
 <app-lines-background></app-lines-background>
 <app-stars-background></app-stars-background>
 
