--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-background></app-background>
+
 <app-navbar *ngIf="shouldShowNavbar() && !isAdminDashboard()"  ></app-navbar>
 <router-outlet></router-outlet>
 
