--- a/src/app/components/pages/profile/profile.component.html
+++ b/src/app/components/pages/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-background></app-background>
+<!-- <app-background></app-background> -->
 
 <div class="main">
     <div class="image-section">
