--- a/src/app/admin-dashboard/admin-orders/admin-orders.component.html
+++ b/src/app/admin-dashboard/admin-orders/admin-orders.component.html
@@ -13,16 +13,24 @@
         <div class="col-11 main min-vh-100">
             <h1>Orders</h1>
             <div class="top-bar m-2 pb-1 row align-items-end justify-content-between gap-3">
-                <h3 class="col-3"><span>count </span> {{5}}</h3>
+                <h3 class="col-3"><span>count </span> {{orders.length}}</h3>
                 <div class="row col-4 justify-content-end gap-3 filter-home">
                     <button class="btn btn-outline-primary col-5 "> <i class="bi bi-filter"></i> Newest</button>
                     <button class="btn btn-outline-primary col-5 "> <i class="bi bi-filter"></i> Oldest</button>
                 </div>
             </div>
-            <!-- main content -->
-            <div class="row justify-content-center align-items-start">
-                <app-order-card class="col-4"></app-order-card>
+            <!-- card -->
+            <div *ngIf="loading" class="text-center py-3">
+                Loading...
             </div>
+
+            <div class="row justify-content-start align-items-start" *ngIf="!loading">
+                <div class="col-4" *ngFor="let order of orders">
+                    <app-order-card [order]="order" (deliver)="onDeliverOrder($event)">
+                    </app-order-card>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
